﻿shmuel 22.09.2019 10:55:23 +0200 - build 706

1. Add functions mf.serialize, mf.deserialize.

shmuel 05.09.2019 03:23:04 +0200 - build 705

1. Generic plugin: prevent stack overflow in GetContentDataW calls due to error/message box.

shmuel 03.09.2019 13:44:25 +0200 - build 704

1. LuaFAR:
   New function far.FileTimeResolution(). This function can set current resolution of time values
   to either 1ms or 100ns. The resolution affects several functions (they are listed in the manual).
   The idea is to move gradually from 1ms to 100ns time resolution while not breaking the existing
   LuaFAR plugins.

shmuel 31.08.2019 22:10:18 +0200 - build 703

1. LuaFAR: refactoring.

shmuel 31.08.2019 19:08:04 +0200 - build 702

1. LuaFAR: remove parts from slnunico.c that are not supposed to be used.

shmuel 30.08.2019 23:00:22 +0200 - build 701

1. LuaFAR: make utf8.cfind=utf8.find for backward compatibility.

2. LuaFAR: handle x64 warnings in lutf8lib.c.

shmuel 30.08.2019 15:37:22 +0200 - build 700

1. Remove unicode.utf8.cfind function. It is not needed when utf8.find is available.

shmuel 30.08.2019 14:36:46 +0200 - build 699

1. LuaFAR: add "luautf8" library (https://github.com/starwing/luautf8).
   - The library can be directly accessed via "utf8" global variable.
   - This library becomes the default when calling string functions with colon syntax, e.g. var:match().
   - A few missing functions are copied to utf8 from unicode.utf8: dump, format, rep, utf8valid.

shmuel 16.08.2019 17:25:50 +0200 - build 698

1. LuaFAR: из реализации функций panel.SetSelection() / panel.ClearSelection() убраны внутренние вызовы
   FCTL_BEGINSELECTION / FCTL_ENDSELECTION; это отдано на усмотрение пользовательских скриптов.
   Причина изменения: Far Manager не поддерживает вложенные вызовы  FCTL_BEGINSELECTION / FCTL_ENDSELECTION.

shmuel 14.08.2019 10:43:37 +0200 - build 697

1. LuaFAR: добавлены функции panel.BeginSelection и panel.EndSelection.
